pod-info/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servico-podinfo
  namespace: prod-apps
spec:
  type: NodePort
  selector:
    app: podinfo # Conecta este serviço aos Pods que tem essa label
  ports:
  - port: 9898
    targetPort: 9898
    nodePort: 30005 # Porta fixa que usaremos no navegador
